<resources>
    <string name="app_name">Scorpio</string>
    <string name="crime_title">Crime</string>
    <string name="crime_date">date: </string>
    <string name="enter_crime">description...</string>
    <string name="date_picker_title">date</string>
    <string name="delete_crime">Delete</string>
    <string name="email">email...</string>
    <string name="password">password...</string>
    <string name="login">Login</string>
    <string name="crime_number">№</string>
    <string name="img">TODO</string>
    <string name="crime_photo_name">file name</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="search_crime">Search the database.</string>
    <string name="search_desc">Enter the number to search the database.</string>
</resources>
